tests/fixtures/errors/cmp_eq_optout.z
# A value type opts out of equality with ==: null (like create: null),
# removing the auto-generated == / != so comparing it is a hard error.
opaque: record { val: i64 } as { ==: null }
main: function is {
    a: opaque val: 1
    b: opaque val: 2
    if a == b then print "eq" else print "ne"
}
